--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.19.3",
+    "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
