--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.7",
+    "framer-motion": "^11.3.31",
     "geist": "^1.3.1",
     "lucide-react": "^0.416.0",
     "next": "latest",
