--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.19.3",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/functions": "^1.4.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
