--- a/package.json
+++ b/package.json
@@ -50,11 +50,11 @@
     "framer-motion": "^11.3.31",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
-    "next": "latest",
+    "next": "^15.0.0-rc.1",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.33",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.0.0-rc-bf7e210c-20241017",
+    "react-dom": "^19.0.0-rc-bf7e210c-20241017",
     "react-hook-form": "^7.52.1",
     "react-number-format": "^5.4.0",
     "recharts": "^2.12.7",
