--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "next dev",
     "turbo": "next dev --turbo",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start"
   },
   "dependencies": {
@@ -50,11 +50,11 @@
     "framer-motion": "^11.3.31",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
-    "next": "^15.0.0-rc.1",
+    "next": "latest",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.33",
-    "react": "^19.0.0-rc-bf7e210c-20241017",
-    "react-dom": "^19.0.0-rc-bf7e210c-20241017",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
     "react-number-format": "^5.4.0",
     "recharts": "^2.12.7",
