--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start"
@@ -45,11 +45,11 @@
     "embla-carousel-react": "^8.1.7",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
-    "next": "latest",
+    "next": "15.0.1",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.33",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-hook-form": "^7.52.1",
     "react-number-format": "^5.4.0",
     "recharts": "^2.12.7",
@@ -63,10 +63,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "encoding": "^0.1.13",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8"
+  },
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
