--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-table": "^8.19.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/functions": "^1.4.1",
