--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbopack --experimental-https",
     "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
