--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -43,6 +43,7 @@
     "embla-carousel-react": "^8.1.7",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
+    "million": "^3.1.11",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.33",
