--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "embla-carousel-react": "^8.1.7",
     "geist": "^1.3.1",
     "lucide-react": "^0.447.0",
-    "next": "15.0.1",
+    "next": "^15.0.1",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.33",
     "react": "19.0.0-rc-69d4b800-20241021",
