Remove outdated To-do file and update component paths to include dashboard prefix

--- a/components.json
+++ b/components.json
@@ -12,6 +12,8 @@
   },
   "aliases": {
     "components": "@/components",
+    "app": "@/components/app",
+    "actions": "@/components/actions",
     "public": "@/public",
     "utils": "@/lib/utils"
   }
