--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@actions/*": ["./app/actions/*"],
+      "@dashboard/*": ["./app/dashboard/*"]
+
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
