--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.7",
     "geist": "^1.3.1",
-    "lucide-react": "^0.447.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.1",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.4",
     "postcss": "^8.4.33",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.52.1",
     "react-number-format": "^5.4.0",
     "recharts": "^2.12.7",
@@ -54,11 +54,11 @@
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
-    "vaul": "^0.9.9",
+    "vaul": "^1.1.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
+    "@types/node": "^22.10.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "encoding": "^0.1.13",
