--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -29,29 +27,28 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.45.6",
-    "@tanstack/react-table": "^8.19.3",
+    "@supabase/supabase-js": "^2.47.10",
+    "@tanstack/react-table": "^8.20.6",
     "@vercel/analytics": "^1.3.1",
     "@vercel/functions": "^1.4.1",
-    "@vercel/speed-insights": "^1.0.12",
+    "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.7",
-    "geist": "^1.3.1",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.4",
     "postcss": "^8.4.33",
-    "react": "19.0.0",
+    "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.52.1",
     "react-number-format": "^5.4.2",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vaul": "^1.1.1",
