--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.1",
@@ -43,7 +44,7 @@
     "postcss": "^8.4.33",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.54.2",
     "react-number-format": "^5.4.2",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
@@ -52,7 +53,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "vaul": "^1.1.1",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
