Update payment handling and UI components for invoices and bills

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vercel/functions": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "autoprefixer": "^10.4.17",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
