Refactor import paths to use alias; update class names for consistency in UI components

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@actions/*": ["./app/actions/*"],
-      "@dashboard/*": ["./app/dashboard/*"]
+      "@/actions/*": ["./app/actions/*"],
+      "@/dashboard/*": ["./app/dashboard/*"]
 
     }
   },
