--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
+    "turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
