Refactor layout components; remove redundant description fields and adjust import paths for consistency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/actions/*": ["./app/actions/*"],
-      "@/dashboard/*": ["./app/dashboard/*"]
+      "@/dashboard/*": ["app/dashboard/*"]
 
     }
   },
