--- a/package.json
+++ b/package.json
@@ -7,58 +7,59 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-context-menu": "^2.2.1",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.1.1",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-navigation-menu": "^1.2.0",
-    "@radix-ui/react-popover": "^1.1.1",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-radio-group": "^1.2.0",
-    "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.0",
+    "@hookform/resolvers": "4.1.3",
+    "@radix-ui/react-avatar": "1.1.3",
+    "@radix-ui/react-checkbox": "1.1.4",
+    "@radix-ui/react-collapsible": "1.1.3",
+    "@radix-ui/react-context-menu": "2.2.6",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-hover-card": "1.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-navigation-menu": "1.2.5",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-progress": "1.1.2",
+    "@radix-ui/react-radio-group": "1.2.3",
+    "@radix-ui/react-scroll-area": "1.2.3",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "1.1.3",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@supabase/ssr": "^0.5.1",
-    "@supabase/supabase-js": "^2.47.10",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@tanstack/react-table": "^8.20.6",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/functions": "^1.4.1",
-    "@vercel/speed-insights": "^1.1.0",
+    "@supabase/ssr": "0.5.2",
+    "@supabase/supabase-js": "2.49.1",
+    "@tailwindcss/postcss": "4.0.9",
+    "@tanstack/react-table": "8.21.2",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/functions": "2.0.0",
+    "@vercel/speed-insights": "1.2.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.1.7",
-    "lucide-react": "^0.468.0",
-    "next": "^15.1.6",
+    "lucide-react": "0.477.0",
+    "next": "15.2.1",
     "next-themes": "^0.4.4",
-    "postcss": "^8.4.33",
+    "postcss": "8.5.3",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-number-format": "^5.4.2",
-    "recharts": "^2.15.0",
-    "sonner": "^1.7.1",
-    "tailwind-merge": "^2.4.0",
-    "tailwindcss": "^4.0.0",
+    "react-number-format": "5.4.3",
+    "recharts": "2.15.1",
+    "sonner": "2.0.1",
+    "tailwind-merge": "3.0.2",
+    "tailwindcss": "4.0.9",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
-    "vaul": "^1.1.1",
-    "zod": "^3.24.1"
+    "typescript": "5.8.2",
+    "vaul": "1.1.2",
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
+    "@types/node": "22.13.9",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "encoding": "^0.1.13",
