--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "turbo": "next dev --turbopack",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
@@ -25,10 +24,10 @@
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-toast": "^1.2.1",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "0.5.2",
     "@supabase/supabase-js": "2.49.1",
     "@tailwindcss/postcss": "4.0.9",
@@ -37,13 +36,13 @@
     "@vercel/functions": "2.0.0",
     "@vercel/speed-insights": "1.2.0",
     "canvas-confetti": "^1.9.3",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.1.7",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "0.477.0",
     "next": "15.2.1",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.5",
     "postcss": "8.5.3",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
@@ -63,7 +62,7 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "encoding": "^0.1.13",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "overrides": {
