--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "0.5.2",
     "@supabase/supabase-js": "2.49.1",
-    "@tailwindcss/postcss": "4.0.9",
+    "@tailwindcss/postcss": "4.0.13",
     "@tanstack/react-table": "8.21.2",
     "@vercel/analytics": "1.5.0",
     "@vercel/functions": "2.0.0",
@@ -40,18 +40,18 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
-    "lucide-react": "0.477.0",
-    "next": "15.2.1",
+    "lucide-react": "0.479.0",
+    "next": "15.2.2",
     "next-themes": "^0.4.5",
     "postcss": "8.5.3",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "7.54.2",
     "react-number-format": "5.4.3",
     "recharts": "2.15.1",
     "sonner": "2.0.1",
     "tailwind-merge": "3.0.2",
-    "tailwindcss": "4.0.9",
+    "tailwindcss": "4.0.13",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.2",
     "vaul": "1.1.2",
@@ -68,5 +68,5 @@
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  }
+  } 
 }
