--- a/package.json
+++ b/package.json
@@ -10,27 +10,20 @@
     "@radix-ui/react-avatar": "1.1.3",
     "@radix-ui/react-checkbox": "1.1.4",
     "@radix-ui/react-collapsible": "1.1.3",
-    "@radix-ui/react-context-menu": "2.2.6",
     "@radix-ui/react-dialog": "1.1.6",
     "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-hover-card": "1.1.6",
     "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-navigation-menu": "1.2.5",
     "@radix-ui/react-popover": "1.1.6",
     "@radix-ui/react-progress": "1.1.2",
-    "@radix-ui/react-radio-group": "1.2.3",
-    "@radix-ui/react-scroll-area": "1.2.3",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@supabase/ssr": "0.5.2",
     "@supabase/supabase-js": "2.49.1",
-    "@tailwindcss/postcss": "4.0.13",
+    "@tailwindcss/postcss": "^4.0.14",
     "@tanstack/react-table": "8.21.2",
     "@vercel/analytics": "1.5.0",
     "@vercel/functions": "2.0.0",
@@ -39,11 +32,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
-    "lucide-react": "0.479.0",
+    "lucide-react": "0.482.0",
     "next": "15.2.2",
-    "next-themes": "^0.4.5",
-    "postcss": "8.5.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
@@ -52,21 +43,18 @@
     "sonner": "2.0.1",
     "tailwind-merge": "3.0.2",
     "tailwindcss": "4.0.13",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.8.2",
     "vaul": "1.1.2",
     "zod": "3.24.2"
   },
   "devDependencies": {
-    "@types/node": "22.13.9",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "encoding": "^0.1.13",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  } 
+  }
 }
