--- a/package.json
+++ b/package.json
@@ -17,41 +17,41 @@
     "@radix-ui/react-progress": "1.1.2",
     "@radix-ui/react-select": "2.1.6",
     "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-toggle": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-toggle": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
     "@supabase/ssr": "0.6.1",
-    "@supabase/supabase-js": "2.49.1",
-    "@tailwindcss/postcss": "^4.0.15",
+    "@supabase/supabase-js": "2.49.3",
+    "@tailwindcss/postcss": "4.0.16",
     "@tanstack/react-table": "8.21.2",
     "@vercel/analytics": "1.5.0",
     "@vercel/functions": "2.0.0",
     "@vercel/speed-insights": "1.2.0",
-    "canvas-confetti": "^1.9.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "0.483.0",
-    "next": "15.2.3",
-    "next-themes": "^0.4.6",
-    "react": "^19.0.0",
+    "canvas-confetti": "1.9.3",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "lucide-react": "0.484.0",
+    "next": "15.2.4",
+    "next-themes": "0.4.6",
+    "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "7.54.2",
     "react-number-format": "5.4.3",
     "recharts": "2.15.1",
     "sonner": "2.0.1",
     "tailwind-merge": "3.0.2",
-    "tailwindcss": "4.0.15",
+    "tailwindcss": "4.0.16",
     "typescript": "5.8.2",
     "vaul": "1.1.2",
     "zod": "3.24.2"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11"
+    "@types/react-dom": "npm:types-react-dom@19.0.0",
+    "prettier": "3.5.3",
+    "prettier-plugin-tailwindcss": "0.6.11"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
