Refactor dashboard components to utilize new service functions and improve code organization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "paths": {
       "@/*": ["./*"],
       "@/actions/*": ["./app/actions/*"],
+      "@/services/*": ["./app/services/*"],
       "@/dashboard/*": ["app/(dashboard)/*"]
 
     }
