--- a/components.json
+++ b/components.json
@@ -14,6 +14,7 @@
     "components": "@/components",
     "app": "@/components/app",
     "actions": "@/components/actions",
+    "services": "@/components/services",
     "public": "@/public",
     "utils": "@/lib/utils"
   }
