--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sonner": "2.0.1",
     "tailwind-merge": "3.0.2",
     "tailwindcss": "4.0.17",
+    "tw-animate-css": "^1.2.5",
     "typescript": "5.8.2",
     "vaul": "1.1.2",
     "zod": "3.24.2"
