--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "4.1.3",
+    "@hookform/resolvers": "5.0.1",
     "@radix-ui/react-avatar": "1.1.3",
     "@radix-ui/react-checkbox": "1.1.4",
     "@radix-ui/react-collapsible": "1.1.3",
@@ -19,12 +19,12 @@
     "@radix-ui/react-separator": "1.1.2",
     "@radix-ui/react-slot": "1.1.2",
     "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tabs": "1.1.3",
     "@radix-ui/react-toggle": "1.1.2",
     "@radix-ui/react-tooltip": "1.1.8",
     "@supabase/ssr": "0.6.1",
-    "@supabase/supabase-js": "2.49.3",
-    "@tailwindcss/postcss": "4.0.17",
+    "@supabase/supabase-js": "2.49.4",
+    "@tailwindcss/postcss": "4.1.2",
     "@tanstack/react-table": "8.21.2",
     "@vercel/analytics": "1.5.0",
     "@vercel/functions": "2.0.0",
@@ -33,18 +33,18 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "lucide-react": "0.484.0",
+    "lucide-react": "0.487.0",
     "next": "15.2.4",
     "next-themes": "0.4.6",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "7.54.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "7.55.0",
     "react-number-format": "5.4.3",
-    "recharts": "2.15.1",
-    "sonner": "2.0.1",
-    "tailwind-merge": "3.0.2",
-    "tailwindcss": "4.0.17",
-    "tw-animate-css": "^1.2.5",
+    "recharts": "2.15.2",
+    "sonner": "2.0.3",
+    "tailwind-merge": "3.1.0",
+    "tailwindcss": "4.1.2",
+    "tw-animate-css": "1.2.5",
     "typescript": "5.8.2",
     "vaul": "1.1.2",
     "zod": "3.24.2"
