--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   },
   "dependencies": {
     "@hookform/resolvers": "5.0.1",
-    "@radix-ui/react-avatar": "1.1.3",
-    "@radix-ui/react-checkbox": "1.1.4",
-    "@radix-ui/react-collapsible": "1.1.3",
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-popover": "1.1.6",
-    "@radix-ui/react-progress": "1.1.2",
-    "@radix-ui/react-select": "2.1.6",
-    "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slot": "1.1.2",
-    "@radix-ui/react-switch": "1.1.3",
-    "@radix-ui/react-tabs": "1.1.3",
-    "@radix-ui/react-toggle": "1.1.2",
-    "@radix-ui/react-tooltip": "1.1.8",
+    "@radix-ui/react-avatar": "1.1.4",
+    "@radix-ui/react-checkbox": "1.1.5",
+    "@radix-ui/react-collapsible": "1.1.4",
+    "@radix-ui/react-dialog": "1.1.7",
+    "@radix-ui/react-dropdown-menu": "2.1.7",
+    "@radix-ui/react-label": "2.1.3",
+    "@radix-ui/react-popover": "1.1.7",
+    "@radix-ui/react-progress": "1.1.3",
+    "@radix-ui/react-select": "2.1.7",
+    "@radix-ui/react-separator": "1.1.3",
+    "@radix-ui/react-slot": "1.2.0",
+    "@radix-ui/react-switch": "1.1.4",
+    "@radix-ui/react-tabs": "1.1.4",
+    "@radix-ui/react-toggle": "1.1.3",
+    "@radix-ui/react-tooltip": "1.2.0",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.49.4",
     "@tailwindcss/postcss": "4.1.3",
@@ -34,7 +34,7 @@
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
     "lucide-react": "0.487.0",
-    "next": "15.2.4",
+    "next": "15.3.0",
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -43,9 +43,9 @@
     "recharts": "2.15.2",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
-    "tailwindcss": "4.1.2",
+    "tailwindcss": "4.1.3",
     "tw-animate-css": "1.2.5",
-    "typescript": "5.8.2",
+    "typescript": "5.8.3",
     "vaul": "1.1.2",
     "zod": "3.24.2"
   },
@@ -59,7 +59,7 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   },
-  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+  "packageManager": "pnpm@10.8.0",
   "pnpm": {
     "ignoredBuiltDependencies": [
       "@vercel/speed-insights",
