--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.20",
+    "@ai-sdk/react": "^1.2.9",
     "@hookform/resolvers": "5.0.1",
     "@radix-ui/react-avatar": "1.1.6",
     "@radix-ui/react-checkbox": "1.2.2",
@@ -29,6 +31,7 @@
     "@vercel/analytics": "1.5.0",
     "@vercel/functions": "2.0.0",
     "@vercel/speed-insights": "1.2.0",
+    "ai": "^4.3.10",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
