--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
@@ -21,13 +25,28 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"],
-      "@/actions/*": ["./app/actions/*"],
-      "@/services/*": ["./app/services/*"],
-      "@/dashboard/*": ["app/(dashboard)/*"]
-
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@/actions/*": [
+        "./app/actions/*"
+      ],
+      "@/services/*": [
+        "./app/services/*"
+      ],
+      "@/dashboard/*": [
+        "app/(dashboard)/*"
+      ]
+    },
+    "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
