--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@ai-sdk/openai": "1.3.20",
     "@ai-sdk/react": "1.2.9",
     "@hookform/resolvers": "5.0.1",
-    "@radix-ui/react-accordion": "^1.2.8",
+    "@radix-ui/react-accordion": "1.2.8",
     "@radix-ui/react-avatar": "1.1.7",
     "@radix-ui/react-checkbox": "1.2.3",
     "@radix-ui/react-collapsible": "1.1.8",
@@ -58,16 +58,5 @@
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11"
-  },
-  "overrides": {
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
-  },
-  "packageManager": "pnpm@10.10.0",
-  "pnpm": {
-    "ignoredBuiltDependencies": [
-      "@vercel/speed-insights",
-      "sharp"
-    ]
   }
-}
+  }
