--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.2",
     "react-number-format": "5.4.4",
+    "react-scan": "^0.3.3",
     "recharts": "2.15.3",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
