--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "12.9.4",
+    "framer-motion": "12.9.6",
     "lucide-react": "0.507.0",
     "next": "15.3.1",
     "next-themes": "0.4.6",
@@ -45,7 +45,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.2",
     "react-number-format": "5.4.4",
-    "react-scan": "^0.3.3",
+    "react-scan": "0.3.3",
     "recharts": "2.15.3",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
@@ -53,7 +53,7 @@
     "tw-animate-css": "1.2.9",
     "typescript": "5.8.3",
     "vaul": "1.1.2",
-    "zod": "3.24.3"
+    "zod": "3.24.4"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
