--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "embla-carousel-react": "8.6.0",
     "framer-motion": "12.16.0",
     "input-otp": "1.4.2",
-    "lucide-react": "0.513.0",
     "next": "15.3.3",
     "next-themes": "0.4.6",
     "react": "19.1.0",
@@ -60,6 +59,7 @@
     "react-resizable-panels": "3.0.2",
     "react-scan": "0.3.4",
     "recharts": "2.15.3",
+    "remixicon-react": "^1.0.0",
     "sonner": "2.0.5",
     "tailwind-merge": "3.3.0",
     "tailwindcss": "4.1.8",
