--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "embla-carousel-react": "8.6.0",
     "framer-motion": "12.16.0",
     "input-otp": "1.4.2",
-    "lucide-react": "0.513.0",
+    "@remixicon/react": "^4.6.0",
     "next": "15.3.3",
     "next-themes": "0.4.6",
     "react": "19.1.0",
