--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.3.22",
-    "@hookform/resolvers": "5.0.1",
+    "@hookform/resolvers": "5.1.1",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -36,7 +36,7 @@
     "@radix-ui/react-tooltip": "1.2.7",
     "@supabase/ssr": "0.6.1",
     "@supabase/supabase-js": "2.50.0",
-    "@tailwindcss/postcss": "4.1.8",
+    "@tailwindcss/postcss": "4.1.10",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
     "@vercel/speed-insights": "1.2.0",
@@ -47,9 +47,9 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
-    "framer-motion": "12.16.0",
+    "framer-motion": "12.18.1",
     "input-otp": "1.4.2",
-    "@remixicon/react": "^4.6.0",
+    "@remixicon/react": "4.6.0",
     "next": "15.3.3",
     "next-themes": "0.4.6",
     "react": "19.1.0",
@@ -61,12 +61,12 @@
     "react-scan": "0.3.4",
     "recharts": "2.15.3",
     "sonner": "2.0.5",
-    "tailwind-merge": "3.3.0",
-    "tailwindcss": "4.1.8",
+    "tailwind-merge": "3.3.1",
+    "tailwindcss": "4.1.10",
     "tw-animate-css": "1.3.4",
     "typescript": "5.8.3",
     "vaul": "1.1.2",
-    "zod": "3.25.55"
+    "zod": "3.25.64"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
