--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-scan": "0.3.4",
     "recharts": "2.15.3",
     "sonner": "2.0.5",
+    "swr": "^2.3.3",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.10",
     "tw-animate-css": "1.3.4",
