--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-tooltip": "1.2.7",
     "@remixicon/react": "4.6.0",
     "@supabase/ssr": "0.6.1",
-    "@tailwindcss/postcss": "4.1.10",
+    "@tailwindcss/postcss": "4.1.11",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
     "ai": "4.3.16",
@@ -45,25 +45,25 @@
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "12.18.1",
-    "next": "15.3.3",
+    "framer-motion": "12.23.0",
+    "next": "15.3.5",
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "7.57.0",
+    "react-hook-form": "7.60.0",
     "react-number-format": "5.4.4",
-    "recharts": "2.15.3",
-    "sonner": "2.0.5",
-    "swr": "^2.3.3",
+    "recharts": "3.0.2",
+    "sonner": "2.0.6",
+    "swr": "2.3.4",
     "tailwind-merge": "3.3.1",
-    "tailwindcss": "4.1.10",
-    "tw-animate-css": "1.3.4",
+    "tailwindcss": "4.1.11",
+    "tw-animate-css": "1.3.5",
     "typescript": "5.8.3",
-    "zod": "3.25.64"
+    "zod": "3.25.74"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
-    "prettier": "3.5.3",
-    "prettier-plugin-tailwindcss": "0.6.12"
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "0.6.13"
   }
 }
