--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
     "@remixicon/react": "4.6.0",
+    "@sentry/nextjs": "^10.1.0",
     "@supabase/ssr": "0.6.1",
     "@tailwindcss/postcss": "4.1.11",
     "@tanstack/react-table": "8.21.3",
