--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-hook-form": "7.60.0",
     "react-number-format": "5.4.4",
     "recharts": "3.1.0",
+    "require-in-the-middle": "^7.5.2",
     "sonner": "2.0.6",
     "swr": "2.3.4",
     "tailwind-merge": "3.3.1",
