--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/openai": "1.3.23",
-    "@hookform/resolvers": "5.1.1",
+    "@ai-sdk/openai": "2.0.4",
+    "@hookform/resolvers": "5.2.1",
     "@radix-ui/react-accordion": "1.2.11",
     "@radix-ui/react-alert-dialog": "1.1.14",
     "@radix-ui/react-aspect-ratio": "1.1.7",
@@ -35,33 +35,33 @@
     "@radix-ui/react-toggle-group": "1.1.10",
     "@radix-ui/react-tooltip": "1.2.7",
     "@remixicon/react": "4.6.0",
-    "@sentry/nextjs": "^10.1.0",
+    "@sentry/nextjs": "10.2.0",
     "@supabase/ssr": "0.6.1",
     "@tailwindcss/postcss": "4.1.11",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
-    "ai": "4.3.19",
+    "ai": "5.0.7",
     "canvas-confetti": "1.9.3",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
-    "framer-motion": "12.23.6",
-    "next": "15.4.3",
+    "framer-motion": "12.23.12",
+    "next": "15.4.6",
     "next-themes": "0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "7.60.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "react-hook-form": "7.62.0",
     "react-number-format": "5.4.4",
-    "recharts": "3.1.0",
-    "require-in-the-middle": "^7.5.2",
-    "sonner": "2.0.6",
+    "recharts": "3.1.2",
+    "require-in-the-middle": "7.5.2",
+    "sonner": "2.0.7",
     "swr": "2.3.4",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.5",
-    "typescript": "5.8.3",
-    "zod": "4.0.5"
+    "tw-animate-css": "1.3.6",
+    "typescript": "5.9.2",
+    "zod": "4.0.15"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
