--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@sentry/nextjs": "10.5.0",
     "@supabase/ssr": "0.6.1",
     "@tailwindcss/postcss": "4.1.12",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "8.21.3",
     "@vercel/analytics": "1.5.0",
     "ai": "5.0.15",
@@ -56,7 +57,6 @@
     "recharts": "3.1.2",
     "require-in-the-middle": "7.5.2",
     "sonner": "2.0.7",
-    "swr": "2.3.6",
     "tailwind-merge": "3.3.1",
     "tailwindcss": "4.1.12",
     "tw-animate-css": "1.3.7",
