feat: add ignoredBuiltDependencies for @tailwindcss/oxide in pnpm configuration

--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
   "pnpm": {
     "overrides": {
       "@types/react": "19.1.10"
-    }
+    },
+    "ignoredBuiltDependencies": [
+      "@tailwindcss/oxide"
+    ]
   }
 }
