feat: Enhance payer creation with avatar support and improve performance
- Added functionality to fetch avatar images from the public/avatars directory and pass them to the CreatePayer component.
- Updated package.json to include additional built dependencies for improved functionality.
- Removed obsolete SQL migration files related to extensions, tables, functions, policies, and triggers.
- Introduced new migration files to add foreign key indexes for performance optimization.
- Adjusted RLS policies to prevent re-evaluation by using subqueries for auth.uid() checks.

--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
     },
     "ignoredBuiltDependencies": [
       "@tailwindcss/oxide"
+    ],
+    "onlyBuiltDependencies": [
+      "@sentry/cli",
+      "@tailwindcss/oxide",
+      "sharp"
     ]
   }
 }
