--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "framer-motion": "12.23.12",
+    "motion": "^12.23.12",
     "next": "15.5.0",
     "next-themes": "0.4.6",
     "react": "19.1.1",
