chore: update .gitignore to include additional files and remove Sentry config, modify triggers for orcamento_regra_502030, and delete empty views migration

--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,13 @@ yarn-error.log*
 next-env.d.ts
 
 certificates
-# Sentry Config File
-.env.sentry-build-plugin
 
 # Supabase
 /supabase/.temp
+
+/.vscode
+/.qwen
+
+QWEN.md
+AGENTS.md
+GEMINI.md
